# mlx-gliner2

./: .gitignore  README.md  pyproject.toml
mlx_gliner2/: __init__.py  convert.py  inference.py  layers.py  model.py  processor.py  span_rep.py
mlx_gliner2/encoder/: __init__.py  deberta_v2.py
tests/: test_entity_extraction.py  test_relation_extraction.py  test_structure_extraction.py
